Locator rewrite (#112)
Co-authored-by: Technici4n <13494793+technici4n@users.noreply.github.com>
Co-authored-by: Sebastian Hartte <shartte@users.noreply.github.com>