@@ -53,9 +53,6 @@ allprojects {
             name = 'Minecraft'
             url = 'https://libraries.minecraft.net'
         }
-
-        // TODO remove
-        mavenLocal()
     }
 
     dependencyUpdates.rejectVersionIf { isNonStable(it.candidate.version) }
@@ -69,6 +66,9 @@ allprojects {
 
     test {
         useJUnitPlatform()
+
+        // Needed by UnionFS
+        jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
     }
 }
 
